lab1/Test/L1-A-13-21.output
Error Type B at Line 3
Error Type A at Line 10
Error Type B at Line 14
Error Type B at Line 19
Error Type B at Line 24
Error Type A at Line 25
Error Type B at Line 29
Error Type B at Line 30
Error Type B at Line 40
Error Type B at Line 40
