lab1/Test/L1-A-13-21.cmm
float FH8pDZWsp7WMeVseAc 

int no0NIGoh4GtHaSAN4b ( ) {
}
int ;
int aTMLq0vLAAU50Y , DgcPRQrS6inZwCnuP 

;
struct U33G6 {
  int hWONnGXS , W46 %;
};
struct {
}VXWUcoJ2_ ( int d5WtM7VNkElLL_x2uy , struct FXsEdKg2SoGQis 
  ( SNjWfmVSoEbo ) {
  int EgTIL0oYA [ 843222304 ] = SuvBB && FA33hO > 
    k + nqw7sZCDK [ kWZBpW57babubabu7 = fj6Ysa84e93reKWQXKi0 
    || o6 <= M5bcs_HLAq2eqebOuq - C3gNjsuW / rStXmWSMONXvMet21Fp 
    ( qYoxcTeea1A4hIh = nr_jejYNWxFh4F >= tnw9T / - ybP2YvdGtucNKZC6 
    ( , nXPz = cRfEKnE == ( ZOtaqa || rhR5 < XPaNtkOOFQDeWD0TJz 
    [ SLHehcE4a3LM != cO2 ] ) ) / 897865412 - ! HiqBdcqopG 
    && 1558729704.1337035496 ) * ! - ! cskB ( ) . ljoQTSMI7ax 
    ] ;
{
*   }}
int 'mUcxKZ6RLA2I4 ( ) {
}
int ;
int tBqLo7K ( ) {
}. 
int ( ) {
  if ( qfQ2jrYrUbVI )   while ( rsJTQM6CCOdR )   return 
    pTwcDG ;

else   if ( b8tLLD )   WnxmV ;


}
int r9DMH9trjXZuc ( ) {
  if ( tDZEfW4vEPRBy )   Lzy_AXjI7607Sr6Xy 
else   ;

}
